CC-48:enabling code values based on active or inactive status

--- a/app/scripts/config/UIconfig.json
+++ b/app/scripts/config/UIconfig.json
@@ -52,6 +52,11 @@
 		"isAutoPopulate":{
 		  "active":true
 		}
+	},
+	"createCodeValue":{
+		"isHiddenField":{
+		  "active":false
+		}
 	}
   }
 }
